--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,42 +10,39 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-
+      
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
-
+    
     - name: Install dependencies
       run: npm ci
-
+      
     - name: Build
       run: npm run build
-
+      
     - name: Setup Pages
       uses: actions/configure-pages@v4
-      if: github.ref == 'refs/heads/main'
-
+      
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
-      if: github.ref == 'refs/heads/main'
       with:
-        path: ./dist
-
+        path: './dist'
+        
     - name: Deploy to GitHub Pages
       id: deployment
-      if: github.ref == 'refs/heads/main'
       uses: actions/deploy-pages@v4
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
